--- a/monitor/visionit/templates/visionit/base.html
+++ b/monitor/visionit/templates/visionit/base.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="{% url "rename" %}">Rename Persons</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Direction Helper</a>
+                <a class="nav-link" href="{% url "map" %}" tabindex="-1">Direction Helper</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Location</a>
