--- a/monitor/visionit/templates/visionit/map.html
+++ b/monitor/visionit/templates/visionit/map.html
@@ -2,5 +2,5 @@
 {% load static %}
 
 {% block content %}
-<div class="mapouter"><div class="gmap_canvas"><iframe width="1300" height="600" id="gmap_canvas" src="https://maps.google.com/maps?q=22.899291%2C%2089.501481&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.enable-javascript.net">veja aqui como fazê-lo</a></div><style>.mapouter{position:relative;text-align:right;height:600px;width:1300px;}.gmap_canvas {overflow:hidden;background:none!important;height:600px;width:1300px;}</style></div>
+<div class="mapouter"><div class="gmap_canvas"><iframe width="1300" height="600" id="gmap_canvas" src="https://maps.google.com/maps?q=stanford%20international%20university&t=&z=19&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net/blog/best-wordpress-themes/"></a></div><style>.mapouter{position:relative;text-align:right;height:600px;width:1300px;}.gmap_canvas {overflow:hidden;background:none!important;height:600px;width:1300px;}</style></div>
 {% endblock content %}
