--- a/monitor/visionit/templates/visionit/rename.html
+++ b/monitor/visionit/templates/visionit/rename.html
@@ -5,27 +5,29 @@
 
 
 <div class="container mt-5">
-    <div class="row">
+	<div class="row">
+		{% for name in persons %}
+		<div class="col mb-5">
+			<div class="card">
+				{% with 'persons/'|add:name|add:'.jpg' as image_static %}
+				<img class="card-img-top" src="{% static image_static %}" style="max-height:200px; object-fit: contain" alt="Face">
+				{% endwith %}
+				<div class="card-body">
+					<form action="{% url "renamepost" name %}" method="get" class="post-form">{% csrf_token %}
+						<label for="name" class="label">Name</label>
+						<input id="name" type="text" name="name" class="form-control" value="{{ name }}">
+						<input type="submit" class="form-control btn btn-primary mt-3" value="Rename"/>
+					</form>
+					<form action="{% url "deletepost" name %}" method="get" class="post-form">{% csrf_token %}
+						<input type="submit" class="form-control btn btn-danger mt-3" value="Delete"/>
+					</form>
+				</div>
+			</div>
+		</div>
+		{% endfor %}
 
 
-        {% for name in persons %}
-            <div class="col-3 mb-5">
-                <div class="card">
-                    <form action="{% url "renamepost" name %}" method="get" class="post-form">{% csrf_token %}
-                        {% with 'persons/'|add:name|add:'.jpg' as image_static %}
-                            <img class="card-img-top" src="{% static image_static %}" style="max-height:200px; object-fit: contain" alt="Face">
-                        {% endwith %}
-                        <div class="card-body">
-                            <label for="name" class="label">Name</label><input id="name" type="text" name="name" class="form-control" value="{{ name }}">
-                            <input type="submit" class="form-control btn btn-primary mt-3"/>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        {% endfor %}
-
-
-    </div>
+	</div>
 </div>
 
 {% endblock content %}
